--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,39 +8,39 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" 
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    android:background="@drawable/background">
     
-	<LinearLayout android:orientation = "horizontal" 
+	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:weightSum="4"
-	    >
+	    android:orientation="horizontal"
+	    android:weightSum="4" >
 	    
     	<ImageView
     	    android:id="@+id/life1"
     	    android:layout_width="100dp"
         	android:layout_height="match_parent"
         	android:contentDescription="life image 1"
-        	android:layout_weight="1"
         	android:src="@drawable/image_life"
-        	
+        	android:layout_weight="1"
         	/>
+
     	<ImageView
     	    android:id="@+id/life2"
-        	android:contentDescription="life image 2"
-        	android:layout_width="100dp"
-        	android:layout_height="match_parent"
-        	android:src="@drawable/image_life"
-        	android:layout_weight="1"
-        	/>
+    	    android:layout_width="100dp"
+    	    android:layout_height="match_parent"
+    	    android:contentDescription="life image 2"
+    	    android:src="@drawable/image_life" 
+    	    android:layout_weight="1"/>
+
     	<ImageView
     	    android:id="@+id/life3"
-        	android:contentDescription="life image 3"
-        	android:layout_width="100dp"
-        	android:layout_height="match_parent"
-        	android:src="@drawable/image_life"
-        	android:layout_weight="1"
-        	/>
+    	    android:layout_width="100dp"
+    	    android:layout_height="match_parent"
+    	    android:contentDescription="life image 3"
+    	    android:src="@drawable/image_life"
+    	    android:layout_weight="1" />
 
     	<TextView
         	android:layout_width="fill_parent"
@@ -52,9 +52,20 @@
         	android:id="@+id/levelText"
         	android:layout_weight="1"
         	></TextView>
-    	
     </LinearLayout>
-    
+    <RelativeLayout 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    		<TextView
+    		    android:id="@+id/scoreText"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:text="@string/score"
+        		android:textSize="15sp"
+        		android:layout_gravity="left"
+        		android:gravity="left"
+        		></TextView>
+    </RelativeLayout>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
