--- a/res/layout/activity_finished.xml
+++ b/res/layout/activity_finished.xml
@@ -3,16 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="100"
     android:background="@drawable/background">
+
+    <Button
+        android:id="@+id/homeButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/homebutton"
+        android:text="" />
     
   <TextView android:id="@+id/congratsText" 
       android:paddingLeft="10dp" 
-      android:paddingRight="10dp" 
-      android:paddingTop="100dp"
-      android:layout_weight="15" 
+      android:paddingRight="10dp"
+      android:layout_marginTop="30dp"
       android:layout_width="wrap_content" 
-      android:layout_height="wrap_content" 
+      android:layout_height="0dp"
+      android:layout_weight="2" 
       android:textSize="40dp" 
       android:textColor="#FF8000" 
       android:gravity="center" 
@@ -22,9 +30,9 @@
       android:paddingLeft="10dp" 
       android:paddingRight="10dp" 
       android:paddingBottom="60dp" 
-      android:layout_weight="50"
       android:layout_width="wrap_content" 
-      android:layout_height="wrap_content" 
+      android:layout_height="0dp"
+      android:layout_weight="5"  
       android:textSize="25dp" 
       android:gravity="center" 
       android:text="@string/finished" />
@@ -32,10 +40,10 @@
   <TextView android:id="@+id/scoreText" 
       android:paddingLeft="10dp" 
       android:paddingRight="10dp" 
-      android:paddingBottom="80dp" 
-      android:layout_weight="25"
+      android:layout_marginBottom="10dp" 
       android:layout_width="wrap_content" 
-      android:layout_height="wrap_content" 
+      android:layout_height="0dp"
+      android:layout_weight="1"  
       android:textSize="25dp"
       android:textColor="#00E500"
       android:gravity="center"
@@ -45,12 +53,12 @@
   <TextView android:id="@+id/emailText" 
       android:paddingLeft="10dp" 
       android:paddingRight="10dp" 
-      android:layout_weight="10"
       android:layout_width="wrap_content" 
-      android:layout_height="wrap_content" 
+      android:layout_height="0dp"
+      android:layout_weight="1"  
       android:textColor="#0000FF" 
       android:text="Click here to email the developer" 
       android:textSize="20dp" 
-      android:layout_marginBottom="50dp" /> 
+      android:layout_marginBottom="45dp" /> 
       
   </LinearLayout>
